Fix: loading view on mobile & scroll

--- a/src/components/currencies/currenciesList/CurrenciesList.module.scss
+++ b/src/components/currencies/currenciesList/CurrenciesList.module.scss
@@ -1,9 +1,8 @@
 .market-list {
-  position: relative;
   display: flex;
   flex-direction: column;
   overflow: auto;
-  max-height: 65vh;
+  overflow-y: hidden;
   width: 64.5rem;
   margin: 2rem auto 0 auto;
   animation: show-slowly 300ms linear;
@@ -11,7 +10,9 @@
 
   @media (max-width: 1023px) {
     width: 90%;
-    max-height: 75vh;
+  }
+  @media (min-width: 768px) {
+    position: relative;
   }
   .overlay {
     position: absolute;
@@ -20,10 +21,18 @@
     width: 100%;
     height: 100%;
     background-color: rgb(16 11 30 / 51%);
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    z-index: 9;
+
+    .gif-wrapper {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    @media (max-width: 767px) {
+      position: fixed;
+    }
   }
   .load-btn {
     margin: 2rem auto;
